// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game Styled Components It should render CellContainer correctly 1`] = `
.c0 {
  position: relative;
  z-index: 0;
}

.c0:before {
  content: "";
  position: absolute;
  border-bottom: 1px black solid;
  height: 50%;
  width: 100%;
  z-index: -1;
}

.c0:after {
  content: "";
  position: absolute;
  border-right: 1px black solid;
  height: 100%;
  width: 50%;
  z-index: -1;
}

.c0:nth-child(-n + 10):after {
  height: 50%;
  bottom: 0;
}

.c0:nth-child(10n):before {
  width: 50%;
}

.c0:nth-child(10n + 1):before {
  width: 50%;
  left: 50%;
}

.c0:nth-child(n + 91):after {
  height: 50%;
  top: 0;
}

<styled.div
  length={10}
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bwzfXH",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  position: relative;
  z-index: 0;

  &:before {
    content: \\"\\";
    position: absolute;
    border-bottom: 1px black solid;
    height: 50%;
    width: 100%;
    z-index: -1;
  }

  &:after {
    content: \\"\\";
    position: absolute;
    border-right: 1px black solid;
    height: 100%;
    width: 50%;
    z-index: -1;
  }

  /* first row of the grid */
  &:nth-child(-n + ",
            [Function],
            ") {
    &:after {
      height: 50%;
      bottom: 0;
    }
  }

  /* last column of the grid */
  &:nth-child(",
            [Function],
            "n) {
    &:before {
      width: 50%;
    }
  }

  /* first column of the grid */
  &:nth-child(",
            [Function],
            "n + 1) {
    &:before {
      width: 50%;
      left: 50%;
    }
  }

  /* last row of the grid */
  &:nth-child(n + ",
            [Function],
            ") {
    &:after {
      height: 50%;
      top: 0;
    }
  }
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bwzfXH",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    length={10}
  >
    <div
      className="c0"
    />
  </StyledComponent>
</styled.div>
`;

exports[`Game Styled Components It should render GameContainer correctly 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  object-fit: contain;
  display: grid;
  grid-template-rows: repeat(10,minmax(1rem,1fr));
  grid-template-columns: repeat(10,minmax(1rem,1fr));
}

<styled.div
  length={10}
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bdVaJa",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  width: 100%;
  height: 100%;
  object-fit: contain;
  display: grid;
  grid-template-rows: repeat(",
            [Function],
            ", minmax(1rem, 1fr));
  grid-template-columns: repeat(",
            [Function],
            ", minmax(1rem, 1fr));
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bdVaJa",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    length={10}
  >
    <div
      className="c0"
    />
  </StyledComponent>
</styled.div>
`;
